--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,3 +2,6 @@
 set-option -g prefix C-Space
 
 set -g mouse on
+
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
