--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,6 +6,10 @@ set -g mouse on
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+set -g base-index 1
+set -g pane-base-index 1
+set -g renumber-windows on
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
