feat: install neovim with bob and enable 24 bit color

--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -1,7 +1,12 @@
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
 # Remap prefix from 'C-b' to 'C-Space'
 set-option -g prefix C-Space
 
 set -g mouse on
+
+set-option -s escape-time 5
 
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
